--- a/source/sass/blocks/page-preview.scss
+++ b/source/sass/blocks/page-preview.scss
@@ -6,6 +6,16 @@
   background-size: cover;
   position: relative;
 
+  @media (min-width: 768px) {
+    height: 518px;
+    background-color: rgba(129, 179, 210, 0.5);
+    background-image: url("../../img/page-preview-background-tablet.jpg");
+
+    @media (min-resolution: 2dppx) {
+      background-image: url("../../img/page-preview-background-tablet-2x.jpg");
+    }
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -41,7 +51,32 @@
   }
 }
 
-.page-preview__image--welcome {
+.page-preview__image {
   display: block;
   margin: 0 auto;
+
+  @media (min-width: 768px) {
+    width: 457px;
+    height: 78px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 460px;
+    height: 80px;
+  }
+}
+
+.page-preview__image-welcome {
+  display: block;
+  margin: 0 auto;
+
+  @media (min-width: 768px) {
+    width: 461px;
+    height: 350px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 460px;
+    height: 350px;
+  }
 }
