--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,11 +1,17 @@
 .page-footer {
-  margin: 0;
-  padding: 30px 78px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 23px;
+  padding-bottom: 16px;
 
   @media (min-width: 768px) {
-    display: flex;
     flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+    padding-top: 0;
+    padding-bottom: 0;
   }
 }
 
@@ -15,4 +21,13 @@
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
+  text-decoration: none;
+
+  @media (min-width: 768px) {
+    margin-left: 60px;
+  }
+
+  @media (min-width: 1200px) {
+    margin-left: 120px;
+  }
 }
