--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -14,6 +14,11 @@
   transform: translateX(-50%);
 }
 
+.page-header__logo-image {
+  width: 185px;
+  max-width: initial;
+}
+
 
 @media (min-width: 768px) {
   .page-header {
