--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -1,26 +1,139 @@
 .section-content {
-  margin: 0;
-  padding: 0;
+  text-align: center;
+}
+
+.section-content__inner {
+  padding: 37px 20px 35px;
+
+  @media (min-width: 768px) {
+    padding-top: 65px;
+  }
+
+  @media (min-width: 1200px) {
+    padding-top: 100px;
+  }
+
+  .page--home & {
+    padding: 33px 20px 17px 20px;
+
+    @media (min-width: 768px) {
+      padding-top: 50px;
+      padding-bottom: 55px;
+    }
+
+    @media (min-width: 1200px) {
+      padding-top: 60px;
+      padding-bottom: 45px;
+    }
+  }
+
+  .modal & {
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 50px;
+
+    @media (min-width: 768px) {
+      padding-left: 45px;
+      padding-right: 45px;
+    }
+  }
+
+  .modal-failure & {
+    @media (min-width: 768px) {
+      padding-top: 45px;
+      padding-bottom: 35px;
+    }
+  }
+
+  .modal-success & {
+    @media (min-width: 768px) {
+      padding-top: 55px;
+      padding-bottom: 55px;
+    }
+  }
+
+  .video & {
+    @media (min-width: 768px) {
+      padding-top: 14px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
 }
 
 .section-content__title {
+  margin-top: 0;
+  margin-bottom: 25px;
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
   color: #000000;
   text-transform: uppercase;
-  margin: 0;
-  padding: 0;
+
+  @media (min-width: 768px) {
+    //margin-bottom: 33px;
+    font-size: 30px;
+  }
+
+  &--small {
+    @media (min-width: 768px) {
+      font-size: 21px;
+    }
+  }
+
+  .page--home & {
+    margin-bottom: 36px;
+
+    @media (min-width: 768px) {
+      margin-bottom: 28px;
+    }
+  }
+
+  .modal-failure & {
+    @media (min-width: 768px) {
+      line-height: 40px;
+    }
+  }
 
   &--accent {
+    margin-top: 6px;
+    font-size: 21px;
+    line-height: 26px;
     font-weight: 700;
+
+    .page--home & {
+      margin-bottom: 22px;
+
+      @media (min-width: 768px) {
+        margin-bottom: 32px;
+        font-size: 30px;
+      }
+    }
   }
 }
 
 .section-content__description {
+  margin-top: 0;
+  margin-bottom: 0;
   font-weight: 400;
   text-transform: uppercase;
   padding: 0;
+
+  & br {
+    display: none;
+
+    @media (min-width: 768px) {
+      display: block;
+    }
+  }
+
+  .section-content__title--accent + & {
+    @media (min-width: 768px) {
+      max-width: 435px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 .section-content__map {
@@ -28,4 +141,13 @@
   border: none;
   width: 100%;
   height: 350px;
+  margin-bottom: 17px;
+
+  @media (min-width: 768px) {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 1200px) {
+    margin-top: 15px;
+  }
 }
