--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -134,7 +134,7 @@
     background-color: #eeeeee;
 
     &:not(:last-child) .advantages__item-content {
-      border-bottom: 1px solid #D6D6D6;
+      border-bottom: 1px solid #d6d6d6;
 
       @media (min-width: 768px) {
         border: none;
@@ -196,7 +196,7 @@
   padding: 0;
 
   & br {
-    display: inline;
+    display: none;
 
     @media (min-width: 768px) {
       display: block;
