--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,6 +1,24 @@
 .copyright {
   display: flex;
   align-items: center;
+  color: #000000;
+  text-decoration: none;
+
+  &:hover {
+    color: #81b3d2;
+
+    & svg {
+      fill: #81b3d2;
+    }
+  }
+
+  &:active {
+    color: #b3b3b3;
+
+    & svg {
+      fill: #b3b3b3;
+    }
+  }
 
   @media (min-width: 768px) {
     margin-right: 60px;
