--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -30,7 +30,7 @@
 
 .modal__footer {
   padding: 20px;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 
   @media (min-width: 768px) {
     padding: 44px 91px;
