--- a/source/sass/blocks/section-content.scss
+++ b/source/sass/blocks/section-content.scss
@@ -27,6 +27,12 @@
     }
   }
 
+  .section-content--form-description & {
+    @media (min-width: 1200px) {
+      padding-top: 115px;
+    }
+  }
+
   .modal & {
     padding-left: 40px;
     padding-right: 40px;
@@ -35,6 +41,20 @@
     @media (min-width: 768px) {
       padding-left: 45px;
       padding-right: 45px;
+    }
+  }
+
+  .video & {
+    padding-top: 14px;
+
+    @media (min-width: 768px) {
+      padding-top: 14px;
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+
+    @media (min-width: 1200px) {
+      padding-top: 19px;
     }
   }
 
@@ -49,14 +69,6 @@
     @media (min-width: 768px) {
       padding-top: 55px;
       padding-bottom: 55px;
-    }
-  }
-
-  .video & {
-    @media (min-width: 768px) {
-      padding-top: 14px;
-      padding-left: 30px;
-      padding-right: 30px;
     }
   }
 }
@@ -92,6 +104,18 @@
   .modal-failure & {
     @media (min-width: 768px) {
       line-height: 40px;
+    }
+  }
+
+  .section-content--form-description & {
+    @media (min-width: 1200px) {
+      margin-bottom: 33px;
+    }
+  }
+
+  .video & {
+    @media (min-width: 1200px) {
+      margin-bottom: 33px;
     }
   }
 
@@ -142,12 +166,18 @@
   width: 100%;
   height: 350px;
   margin-bottom: 17px;
+  background-image: url("../img/bg--map.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
   @media (min-width: 768px) {
     margin-bottom: 0;
+    background-image: url("../img/bg--map-tablet.jpg");
   }
 
   @media (min-width: 1200px) {
     margin-top: 15px;
+    background-image: url("../img/bg--map-desktop.jpg");
   }
 }
