--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 @use "./blocks/button.scss";
 @use "./blocks/catalog.scss";
 @use "./blocks/copyright.scss";
-@use "./blocks/fonts.scss";
+@use "fonts";
 @use "./blocks/main-nav.scss";
 @use "./blocks/modal.scss";
 @use "./blocks/modal-failure.scss";
@@ -12,7 +12,6 @@
 @use "./blocks/page-container.scss";
 @use "./blocks/page-footer.scss";
 @use "./blocks/page-header.scss";
-@use "./blocks/page-main.scss";
 @use "./blocks/page-preview.scss";
 @use "./blocks/form.scss";
 @use "./blocks/section-content.scss";
