--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -23,7 +23,7 @@
   margin: 0;
   padding: 24px 20px 25px 20px;
   list-style-type: none;
-  border-top: 1px solid #E5E5E5;
+  border-top: 1px solid #e5e5e5;
 
   @media (min-width: 768px) {
     width: 50%;
@@ -72,7 +72,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 7px 20px 15px;
-    background-color: #F2F2F2;
+    background-color: #f2f2f2;
   }
 
   @media (min-width: 1200px) {
