--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -4,7 +4,7 @@
     position: absolute;
     left: 0;
     width: 100%;
-    z-index: 5;
+    z-index: 10;
 
     @media (min-width: 768px) {
       position: initial;
@@ -146,14 +146,17 @@
     line-height: 21px;
     background-color: #ffffff;
     color: #000000;
-
-    &--current {
-      color: #766357;
-    }
   }
 
-  &:hover,
-  &:active {
+  &--current {
     color: #766357;
+  }
+
+  &:hover {
+    color: #81b3d2;
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
   }
 }
