--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -30,4 +30,12 @@
   @media (min-width: 1200px) {
     margin-left: 120px;
   }
+
+  &:hover {
+    color: #81b3d2;
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
