--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -1,5 +1,5 @@
 .video {
-  border-top: 1px solid #E5E5E5;
+  border-top: 1px solid #e5e5e5;
 
   @media (min-width: 768px) {
     margin-bottom: 40px;
@@ -24,7 +24,7 @@
   }
 
   @media (min-width: 1200px) {
-    margin-top: 65px;
+    margin-top: 52px;
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
