--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -102,7 +102,9 @@
   text-transform: uppercase;
   text-align: center;
 
-  *:not(.form__grid) & {
+  .form__impression &,
+  .form__sights &,
+  .form__emotions & {
     @media (min-width: 1200px) {
       position: relative;
 
